--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     init:
       mode: always
   datasource:
-    url: jdbc:h2:file:./db/movie_catalog;INIT=CREATE SCHEMA IF NOT EXISTS movie_schema\;SET SCHEMA movie_schema
+    url: jdbc:h2:file:./db/movie_catalog;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS movie_schema\;SET SCHEMA movie_schema
     driver-class-name: org.h2.Driver
     username: movie_service
     password: movieservicepass
@@ -17,9 +17,6 @@ spring:
     parameters:
       dbms: h2
       schema: movie_schema
-
-application:
-  id-size: 20
 
 logging:
   level:
