--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,8 @@ spring:
   shell:
     interactive:
       enabled: true
-  sql:
-    init:
-      mode: always
   datasource:
-    url: jdbc:h2:file:./db/movie_catalog;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS movie_schema\;SET SCHEMA movie_schema
+    url: jdbc:h2:file:./db/movie_catalog;DB_CLOSE_DELAY=-1;AUTO_SERVER=TRUE;INIT=CREATE SCHEMA IF NOT EXISTS movie_schema\;SET SCHEMA movie_schema
     driver-class-name: org.h2.Driver
     username: movie_service
     password: movieservicepass
